2024-Spring-NCKU-CompilerHW2/result/subtask14-forall/testcase01.out
> Create symbol table (scope level 0)
func: mod
> Insert `mod` (addr: -1) to scope level 0
/home/share/hw2/input/subtask14-forall/testcase01.cpp:2:5: error:  syntax error
     2 |    if  num < 0 ) return ( num + ( num * -1 / mod + 1 ) * mod ); // cool!
       |    ^
Total lines: 2
